[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Kaph-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Kaph-Italic.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0745098, 0.384314, 0.784314, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="wave_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="message" type="Label" parent="."]
modulate = Color( 0.960784, 0.0235294, 0.0235294, 1 )
anchor_right = 1.0
margin_top = 25.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "Grocery Havok
JRM Inc."
align = 1

[node name="congrats" type="Label" parent="."]
visible = false
modulate = Color( 0.054902, 0.00392157, 0.00392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="tutorial" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.615
anchor_right = 0.5
anchor_bottom = 0.615
margin_left = -84.0
margin_top = -19.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Tutorial"

[node name="start_button" type="Button" parent="."]
anchor_left = 0.492
anchor_top = 0.465
anchor_right = 0.492
anchor_bottom = 0.465
margin_left = -57.2
margin_top = -19.0
margin_right = 56.8
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="message_timer" type="Timer" parent="."]

[node name="progress" type="ProgressBar" parent="."]
visible = false
margin_left = 6.0
margin_top = 558.0
margin_right = 188.0
margin_bottom = 600.0
custom_styles/bg = SubResource( 6 )
max_value = 23.0
step = 1.0

[node name="boss" type="Button" parent="."]
visible = false
margin_left = 146.0
margin_top = 427.0
margin_right = 442.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 7 )
text = "See the General Manager"

[connection signal="pressed" from="tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="boss" to="." method="_on_boss_pressed"]
